--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ allprojects {
     }
 }
 
+packagingOptions{
+    doNotStrip '*/mips/*.so'
+    doNotStrip '*/mips64/*.so'
+}
+
 subprojects {
     afterEvaluate { Project project ->
         ext.pluginContainer = project.getPlugins()
